# mundial-statistic

./: .gitignore  ARCHITECTURE.md  README.md  REPORT.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: update.yml
.streamlit/: config.toml
config/: kickoff_times.yaml  model_info.yaml  settings.yaml  teams.yaml  tournament_2026.yaml
data/predictions/: prediction_log.csv
data/processed/: calibration.csv  champion_history.csv  group_tables.csv  knockout_forecasts.csv  match_forecasts.csv  model_comparison.csv  tournament_probabilities.csv
design/components/: bracket.html  group-table.html  header.html  match-card.html  model-health.html  title-race.html
design/foundations/: colors.html  type.html
design/pages/: dashboard.html
docs/: index.html
scripts/: build_site.py  com.mundial.update.plist  run_pipeline.py  site_template.html  start.sh  stop.sh  today.py
src/mundial/: config.py  forecast.py
src/mundial/evaluate/: backtest.py  calibration.py  metrics.py
src/mundial/features/: elo.py
src/mundial/ingest/: live.py  odds.py  results.py
src/mundial/models/: dixon_coles.py  elo_model.py  ensemble.py
src/mundial/serve/: api.py  dashboard.py
src/mundial/simulate/: tournament.py
tests/: test_calibration.py  test_market.py  test_metrics.py  test_models.py  test_tournament.py
