[project]
name = "mundial"
version = "0.1.0"
description = "Predicción de ganadores y resultados del Mundial 2026 con modelos estadísticos"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mundial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
